// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NavigationMenuItem creation should fail when creating with empty targetObjectMetadataId 1`] = `
{
  "extensions": {
    "code": "GRAPHQL_VALIDATION_FAILED",
    "http": {
      "status": 400,
    },
    "userFriendlyMessage": "An error occurred.",
    "value": "",
  },
  "message": "Invalid UUID",
  "name": "ValidationError",
}
`;

exports[`NavigationMenuItem creation should fail when creating with empty targetRecordId 1`] = `
{
  "extensions": {
    "code": "GRAPHQL_VALIDATION_FAILED",
    "http": {
      "status": 400,
    },
    "userFriendlyMessage": "An error occurred.",
    "value": "",
  },
  "message": "Invalid UUID",
  "name": "ValidationError",
}
`;

exports[`NavigationMenuItem creation should fail when creating with invalid folderId (not a UUID) 1`] = `
{
  "extensions": {
    "code": "GRAPHQL_VALIDATION_FAILED",
    "http": {
      "status": 400,
    },
    "userFriendlyMessage": "An error occurred.",
    "value": "not-a-valid-uuid",
  },
  "message": "Invalid UUID",
  "name": "ValidationError",
}
`;

exports[`NavigationMenuItem creation should fail when creating with invalid userWorkspaceId (not a UUID) 1`] = `
{
  "extensions": {
    "code": "GRAPHQL_VALIDATION_FAILED",
    "http": {
      "status": 400,
    },
    "userFriendlyMessage": "An error occurred.",
    "value": "not-a-valid-uuid",
  },
  "message": "Invalid UUID",
  "name": "ValidationError",
}
`;

exports[`NavigationMenuItem creation should fail when creating with invalid targetObjectMetadataId (not a UUID) 1`] = `
{
  "extensions": {
    "code": "GRAPHQL_VALIDATION_FAILED",
    "http": {
      "status": 400,
    },
    "userFriendlyMessage": "An error occurred.",
    "value": "not-a-valid-uuid",
  },
  "message": "Invalid UUID",
  "name": "ValidationError",
}
`;

exports[`NavigationMenuItem creation should fail when creating with invalid targetRecordId (not a UUID) 1`] = `
{
  "extensions": {
    "code": "GRAPHQL_VALIDATION_FAILED",
    "http": {
      "status": 400,
    },
    "userFriendlyMessage": "An error occurred.",
    "value": "not-a-valid-uuid",
  },
  "message": "Invalid UUID",
  "name": "ValidationError",
}
`;

exports[`NavigationMenuItem creation should fail when creating with missing targetObjectMetadataId 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "navigationMenuItem": [
        {
          "errors": [
            {
              "code": "INVALID_NAVIGATION_MENU_ITEM_INPUT",
              "message": "targetObjectMetadataId is required when targetRecordId is provided",
              "userFriendlyMessage": "targetObjectMetadataId is required when targetRecordId is provided",
            },
            {
              "code": "INVALID_NAVIGATION_MENU_ITEM_INPUT",
              "message": "Navigation menu item must be either a folder (with name), a view link (with viewId), or a record link (with targetRecordId and targetObjectMetadataId)",
              "userFriendlyMessage": "Navigation menu item must be either a folder (with name), a view link (with viewId), or a record link (with targetRecordId and targetObjectMetadataId)",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "navigationMenuItem",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 navigationMenuItem",
    "summary": {
      "navigationMenuItem": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating navigation menu item",
  "name": "GraphQLError",
}
`;

exports[`NavigationMenuItem creation should fail when creating with missing targetRecordId 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "navigationMenuItem": [
        {
          "errors": [
            {
              "code": "INVALID_NAVIGATION_MENU_ITEM_INPUT",
              "message": "targetRecordId is required when targetObjectMetadataId is provided",
              "userFriendlyMessage": "targetRecordId is required when targetObjectMetadataId is provided",
            },
            {
              "code": "INVALID_NAVIGATION_MENU_ITEM_INPUT",
              "message": "Navigation menu item must be either a folder (with name), a view link (with viewId), or a record link (with targetRecordId and targetObjectMetadataId)",
              "userFriendlyMessage": "Navigation menu item must be either a folder (with name), a view link (with viewId), or a record link (with targetRecordId and targetObjectMetadataId)",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "navigationMenuItem",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 navigationMenuItem",
    "summary": {
      "navigationMenuItem": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating navigation menu item",
  "name": "GraphQLError",
}
`;

exports[`NavigationMenuItem creation should fail when creating with negative position 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "navigationMenuItem": [
        {
          "errors": [
            {
              "code": "INVALID_NAVIGATION_MENU_ITEM_INPUT",
              "message": "Position must be a non-negative integer",
              "userFriendlyMessage": "Position must be a non-negative integer",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "navigationMenuItem",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 navigationMenuItem",
    "summary": {
      "navigationMenuItem": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating navigation menu item",
  "name": "GraphQLError",
}
`;
